--- a/index.html
+++ b/index.html
@@ -14,14 +14,47 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi there, I'm Sekar Sundaram!</h1>
+				<p>Lets learn some vi editor search and replace:
+			
+			vi / vim editor - beginner to advanced - options - search and replace
+
+1). Search whole file, replace globally (all occurrence/repetitions will be replaced)
+
+:%s/FindMe/ReplaceMe/g
+
+2). Search current line only, replace globally on that line only.
+
+:s/FindMe/ReplaceMe/g
+
+3). Search whole file, replace only first match
+
+:%s/FindMe/ReplaceMe/
+
+4). Search current line only, replace first match only.
+
+:s/FindMe/ReplaceMe/
+
+5). Search whole file, replace globally, with confirmation(c).
+
+:%s/FindMe/ReplaceMe/gc
+
+6). Search whole file, replace globally, with confirmation(c), Case Sensitive(I) search.
+
+:%s/FindMe/ReplaceMe/gcI
+
+7). Search whole file, replace globally, with confirmation(c), Case insensitive(i) search.
+
+:%s/FindMe/ReplaceMe/gci
+	
+			
+			</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:inventsekar@gmail.com">email</a></li>
+        		<li><a href="https://github.com/inventsekar">github.com/inventsekar</a></li>
 			</ul>
 		</footer>
 	</body>
