--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         		<h1>Hi there, I'm Sekar Sundaram!</h1>
 				<p>Lets learn some vi editor search and replace:
 			
-			vi / vim editor - beginner to advanced - options - search and replace
+			<h2> vi / vim editor - beginner to advanced - options - search and replace <h2>
 
 1). Search whole file, replace globally (all occurrence/repetitions will be replaced)
 
