--- a/index.html
+++ b/index.html
@@ -17,36 +17,37 @@
         		<h1>Hi there, I'm Sekar Sundaram!</h1>
 				<p>Lets learn some vi editor search and replace:
 			
-			<h2> vi / vim editor - beginner to advanced - options - search and replace <h2>
+			<h2> vi / vim editor - beginner to advanced - options - search and replace </h2>
+<ul>			
 
-1). Search whole file, replace globally (all occurrence/repetitions will be replaced)
+<li> Search whole file, replace globally (all occurrence/repetitions will be replaced) </li>
 
 :%s/FindMe/ReplaceMe/g
 
-2). Search current line only, replace globally on that line only.
+<li> Search current line only, replace globally on that line only. </li>
 
 :s/FindMe/ReplaceMe/g
 
-3). Search whole file, replace only first match
+<li> Search whole file, replace only first match </li>
 
 :%s/FindMe/ReplaceMe/
 
-4). Search current line only, replace first match only.
+<li> Search current line only, replace first match only. </li>
 
 :s/FindMe/ReplaceMe/
 
-5). Search whole file, replace globally, with confirmation(c).
+<li> Search whole file, replace globally, with confirmation(c). </li>
 
 :%s/FindMe/ReplaceMe/gc
 
-6). Search whole file, replace globally, with confirmation(c), Case Sensitive(I) search.
+<li> Search whole file, replace globally, with confirmation(c), Case Sensitive(I) search. </li>
 
 :%s/FindMe/ReplaceMe/gcI
 
-7). Search whole file, replace globally, with confirmation(c), Case insensitive(i) search.
+<li> Search whole file, replace globally, with confirmation(c), Case insensitive(i) search. </li>
 
 :%s/FindMe/ReplaceMe/gci
-	
+	</ul>
 			
 			</p>
     		</div><!-- /.blurb -->
